apps/data-seeder/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: data-seeder
  namespace: airbnb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: data-seeder
  template:
    metadata:
      labels:
        app: data-seeder
    spec:
      imagePullSecrets:
        - name: ghcr-pull-secret
      containers:
        - name: data-seeder
          image: ghcr.io/my-airbnb/data-seeder:dev-ced81f9e0e0a6cae7b60bb2396cbe84cef1fe69f
          ports:
            - containerPort: 8086
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "768Mi"
              cpu: "300m"
          livenessProbe:
            httpGet:
              path: /health
              port: 8086
            initialDelaySeconds: 30
            periodSeconds: 30
            failureThreshold: 10
